--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -36,15 +36,15 @@ mosip.kernel.sms.unicode=1
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
 mosip.kernel.notification.email.from=mosiptestuser@gmail.com
-spring.mail.host=in-v3.mailjet.com
-spring.mail.username=cce3849e91c62663c2c9eefaa12f7dfc
-spring.mail.password=60fba73e618fd4ed497006c49b6b09a8
+spring.mail.host=smtp.sendgrid.net
+spring.mail.username=apikey
+spring.mail.password= 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
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.debug=true
+spring.mail.debug=false
 
 # MULTIPART (Multipart-Properties)
 # Enable multipart uploads
