--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
@@ -7,7 +7,7 @@ javax.persistence.jdbc.user=prereguser
 javax.persistence.jdbc.password=Mosip@dev123
 
 #Hibernate
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
 hibernate.show_sql=false
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.jdbc.lob.non_contextual_creation=true
