--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -321,6 +321,7 @@ mosip.left_to_right_orientation=eng,fra
 #**************** Notification Type *************
 #mosip.notificationtype=SMS|EMAIL
 mosip.notificationtype=EMAIL
+mosip.kernel.sms.proxy-sms=false
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
