--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
@@ -326,6 +326,7 @@ mosip.left_to_right_orientation=eng,fra
 
 #**************** Notification Type *************
 mosip.notificationtype=SMS|EMAIL
+mosip.kernel.sms.proxy-sms=false
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
