--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
@@ -327,6 +327,7 @@ mosip.left_to_right_orientation=eng,fra
 #**************** Notification Type *************
 mosip.notificationtype=SMS|EMAIL
 mosip.kernel.sms.proxy-sms=false
+mosip.kernel.auth.proxy-otp=false
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
