--- a/deployment/sandbox-v2/roles/activemq/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/activemq/tasks/main.yml
@@ -1,12 +1,11 @@
 ---
 
-# Deploy Keycloak container 
 - name: Get yml from template 
   template:
      src: k8s_mq.yml.j2
      dest: '{{tmp_dir}}/k8s_mq.yml'
 
-- name: Deploy Keycloak on Kurbernetes
+- name: Deploy activemq on Kurbernetes
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_mq.yml'
