--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -9,5 +9,5 @@
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
 - import_playbook: playbooks/prereg.yml
-#- import_playbook: playbooks/regproc.yml
+- import_playbook: playbooks/regproc.yml
 
