[MOSIP-1062] Bug fix in regproc playbook.

--- a/deployment/sandbox-v2/helm/charts/ida/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/values.yaml
@@ -11,28 +11,28 @@ services:
   auth:
     serviceName: authentication-service
     dockerImage: mosipid/authentication-service
-    dockerTag: 1.0.6-SNAPSHOT.52
+    dockerTag: 1.0.8
     containerPort: 8090
     servicePort: 80
     ingressPath: /idauthentication/v1/auth
   internal: 
     serviceName: authentication-internal-service
     dockerImage: mosipid/authentication-internal-service
-    dockerTag: 1.0.6-SNAPSHOT.52
+    dockerTag: 1.0.8
     containerPort: 8093
     servicePort: 80
     ingressPath: /idauthentication/v1/internal
   kyc: 
     serviceName: authentication-kyc-service
     dockerImage: mosipid/authentication-kyc-service
-    dockerTag: 1.0.6-SNAPSHOT.52
+    dockerTag: 1.0.8
     containerPort: 8091
     servicePort: 80
     ingressPath: /idauthentication/v1/kyc
   otp: 
     serviceName: authentication-otp-service
     dockerImage: mosipid/authentication-otp-service
-    dockerTag: 1.0.6-SNAPSHOT.52
+    dockerTag: 1.0.8
     containerPort: 8092
     servicePort: 80
     ingressPath: /idauthentication/v1/otp
