[MOSIP-1062] hardcoded key removed.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -38,7 +38,7 @@ mosip.kernel.sms.unicode=1
 mosip.kernel.notification.email.from=mosiptestuser@gmail.com
 spring.mail.host=smtp.sendgrid.net
 spring.mail.username=apikey
-spring.mail.password= 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
+spring.mail.password= {{ smptp_key }}
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
