changes as per the helm

--- a/deployment/sandbox-v2/helm/charts/keycloak/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/values.yaml
@@ -2,7 +2,7 @@ name: keycloak
 namespace: default
 dockerImage: jboss/keycloak
 dockerTag: 9.0.0 
-sandboxDomainName: test-sandbox.southindia.cloudapp.azure.com
+sandboxDomainName: mosip-tf.technoforte.co.in
 keycloakUser: admin  # Should match mosip.keycloak.admin.user.id in mosip config properites
 keycloakPassword: admin # Should match  mosip.keycloak.admin.secret.key in mosip config properties
 keycloakUrl: 'http://mzworker0/keycloak' # To access Keycloak from outside cluster but within network. Refer ingress file. ANSIBLE  filled.
