--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-repository-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-repository-qa.properties
@@ -9,7 +9,7 @@ mosip.idrepo.db.identity.password=Mosip@dev123
 mosip.idrepo.db.vid.db-name=mosip_idmap
 mosip.idrepo.db.vid.username=idmapuser
 mosip.idrepo.db.vid.password=Mosip@dev123
-mosip.idrepo.hdfs.username=idrepo-qa
+mosip.idrepo.hdfs.username=idrepo
 
 #----------------------------------ID Repo Service---------------------------------------------------------#
 application.id=id-repository
@@ -17,6 +17,7 @@ mosip.idrepo.application.id=ID_REPO
 mosip.idrepo.application.name=ID-Repository
 mosip.idrepo.application.version.pattern=^v\\d+(\\.\\d+)?$
 mosip.idrepo.modulo-value=1000
+mosip.idrepo.datetime.future-time-adjustment=2
 
 #----------------------------------ID Repo Identity Service------------------------------------------------#
 mosip.idrepo.identity.application.version=v1
