--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -8,27 +8,29 @@ console ansible_user=mosipuser
 # All k8s clusters
 [clusters:children]  
 mzcluster
-dmzcluster
+#dmzcluster
 
 # Military zone (secure zone) cluster
 [mzcluster:children]
 mzmaster 
 mzworkers 
+
 [mzmaster]
 mzmaster ansible_user=root
+
 [mzworkers]
 mzworker0 ansible_user=root 
 mzworker1 ansible_user=root
-mzworker2 ansible_user=root
+#mzworker2 ansible_user=root
 
 # De-Military zone (dmz) cluster
-[dmzcluster:children]
-dmzmaster 
-dmzworkers 
-[dmzmaster]
-dmzmaster ansible_user=root
-[dmzworkers]
-dmzworker0 ansible_user=root 
+#[dmzcluster:children]
+#dmzmaster 
+#dmzworkers 
+#[dmzmaster]
+#dmzmaster ansible_user=root
+#[dmzworkers]
+#dmzworker0 ansible_user=root 
 
 
 
