--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -3,6 +3,8 @@
 # Global variables - accessed by different roles and plays
 #
 
+ansible_sudo_pass: mosip
+
 sandbox_domain_name: mosip-tf.technoforte.co.in
 sandbox_public_url: 'https://{{sandbox_domain_name}}'
 
