--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -36,9 +36,9 @@ mosip.kernel.sms.unicode=1
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
 mosip.kernel.notification.email.from=mosiptestuser@gmail.com
-spring.mail.host=smtp.sendgrid.net
-spring.mail.username=apikey
-spring.mail.password= {{ smptp_key }}
+spring.mail.host=smtp.gmail.net
+spring.mail.username=technoforte.mosip@gmail.com
+spring.mail.password=Aswin@123
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
