--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -41,5 +41,14 @@ spec:
         ports:
         - containerPort: {{ .Values.services.internal.containerPort }}
         readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.internal.containerPort }}
+          httpGet:
+            path: {{ .Values.services.internal.healthUrl }} 
+            port: {{ .Values.services.internal.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.internal.healthUrl }} 
+            port: {{ .Values.services.internal.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }}
