[MOSIP-1122] Readiness and Liveliness probes added.

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
@@ -41,5 +41,14 @@ spec:
         ports:
         - containerPort: {{ .Values.services.vid.containerPort }}
         readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.vid.containerPort }}
+          httpGet:
+            path: {{ .Values.services.vid.healthUrl }} 
+            port: {{ .Values.services.vid.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.vid.healthUrl }} 
+            port: {{ .Values.services.vid.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }}
