--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
@@ -41,5 +41,17 @@ spec:
         ports:
         - containerPort: {{ .Values.services.identity.containerPort }}
         readinessProbe:
+          httpGet:
+            path: {{ .Values.services.identity.healthUrl }} 
+            port: {{ .Values.services.identity.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.identity.healthUrl }} 
+            port: {{ .Values.services.identity.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }}
+        readinessProbe:
           tcpSocket:
             port: {{ .Values.services.identity.containerPort }}
