--- a/deployment/sandbox-v2/helm/charts/idrepo/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.yaml
@@ -7,6 +7,9 @@ configServerUrl: http://config-server/config
 ingress:
    namespace: default
 artifactoryUrl: http://13.71.87.138:8040
+probe:
+  initialDelay: 30  # Seconds
+  period: 30 # Seconds
 services:
   identity:
     serviceName: idrepo-identity-service
@@ -15,6 +18,7 @@ services:
     containerPort: 8090
     servicePort: 80
     ingressPath: /idrepository/v1/identity 
+    healthUrl: /idrepository/v1/identity/actuator/health
   vid: 
     serviceName: idrepo-vid-service
     dockerImage: mosipdev/id-repository-vid-service
@@ -22,3 +26,4 @@ services:
     containerPort: 8091
     servicePort: 80
     ingressPath: /idrepository/v1/vid
+    healthUrl: /idrepository/v1/actuator/health
