[MOSIP-1083] Admin properties updated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/admin-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/admin-qa.properties
@@ -1,7 +1,8 @@
 mosip.admin.version-id=v1.0
 mosip.admin.request-id=ADMIN.REQUEST
 #----------------------------------------------ACCOUNTMANAGEMENT------------------------------------------------#
-mosip.admin.accountmgmt.auth-manager-base-uri=https://qa.mosip.io/v1/authmanager
+authmanager.base.url=http://kernel-auth-service/v1/authmanager
+mosip.admin.accountmgmt.auth-manager-base-uri=${authmanager.base.url}
 mosip.admin.accountmgmt.user-name-url=/username/
 mosip.admin.accountmgmt.user-detail-url=/userdetail/
 mosip.admin.accountmgmt.unblock-url=/unblock/
@@ -10,11 +11,10 @@ mosip.admin.accountmgmt.reset-password-url=/resetpassword/
 mosip.admin.app-id=admin
 #---------------------------------------------------------------------------------------------------------------#
 
-mosip.kernel.signature.cryptomanager-encrypt-url=https://qa.mosip.io/v1/cryptomanager/private/encrypt
+mosip.kernel.signature.cryptomanager-encrypt-url=http://kernel-keymanager-service/v1/keymanager/private/encrypt
 
-
-auth.server.validate.url=https://qa.mosip.io/v1.0/authorize/validateToken
-auth.server.refreshToken.url=https://qa.mosip.io/v1.0/authorize/refreshToken
+auth.server.validate.url=${authmanager.base.url}/authorize/admin/validateToken
+auth.server.refreshToken.url=${authmanager.base.url}/authorize/admin/refreshToken
 auth.role.prefix=ROLE_
 auth.header.name=Authorization
 #------------------------------------DB PROPERTIES-------------------------------------------------------------#
@@ -32,10 +32,10 @@ hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
 #---------------------------UserRegistration---------------------------------
-auth.server.user-register-url=https://qa.mosip.io/v1/authmanager/user
-mosip.kernel.emailnotifier-url=https://qa.mosip.io/v1/emailnotifier/email/send
-auth.server.sendotp-url=https://qa.mosip.io/v1/authmanager/authenticate/sendotp
-auth.server.user-add-password-url=https://qa.mosip.io/v1/authmanager/user/addpassword
+auth.server.user-register-url=${authmanager.base.url}/user
+mosip.kernel.emailnotifier-url=http://kernel-notification-service/v1/notifier/email/send
+auth.server.sendotp-url=${authmanager.base.url}/authenticate/sendotp
+auth.server.user-add-password-url=${authmanager.base.url}/user/addpassword
 mosip.admin-appid=admin
 mosip.admin-otp-context=auth-otp
 mosip.admin-userid-otp-type=USERID 
@@ -49,7 +49,7 @@ mosip.admin.security.policy.type1=password
 mosip.admin.security.policy.type2=password,otp
 mosip.admin.security.policy.type3=otp
 mosip.admin.security.policy.role-policy-mapping={ZONAL_ADMIN:'type2',ZONAL_APPROVER:'type1',CENTRAL_ADMIN:'type1',CENTRAL_APPROVER:'type1',REGISTRATION_OFFICER:'type1',REGISTRATION_SUPERVISOR:'type1',REGISTRATION_OPERATOR:'type1'}
-mosip.admin.security.policy.userrole-auth-url=https://dev-int.mosip.io/v1/authmanager/role/{appId}/{username}
+mosip.admin.security.policy.userrole-auth-url=${authmanager.base.url}/role/{appId}/{username}
 
 #---------------------------Masterdata Cards---------------------------------
 
@@ -147,13 +147,11 @@ mosip.admin.masterdata.card.valid-document-ara=\u0648\u062B\u0627\u0626\u0642 \u
 #------------------------------------------------------------------------------------------------------------------
 
 #-----------------UINActive/Deactive--------------------------------- 
-#mosip.admin.uinmgmt.uin-detail-search=https://qa.mosip.io/v1/idrepo/identity/{uin}
-mosip.admin.uinmgmt.uin-detail-search=https://dev.mosip.io/idrepository/v1/identity/uin/{uin}
-#mosip.admin.uinmgmt.uin-detail-search=https://int.mosip.io/idrepository/v1/identity/uin/{uin}
+mosip.admin.uinmgmt.uin-detail-search=http///idrepo-identity-service/v1/identity/uin/{uin}
 
-mosip.kernel.packet-status-update-url=https://qa.mosip.io/registrationprocessor/v1/registrationtransaction/search
-mosip.kernel.zone-validation-url=https://qa.mosip.io/v1/masterdata/zones/authorize
+mosip.kernel.packet-status-update-url=http://regproc-registration-transaction-service/v1/registrationtransaction/search
+mosip.kernel.zone-validation-url=http://kernel-masterdata-service/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5 
 
-mosip.kernel.audit.manager.api=https://qa.mosip.io/v1/auditmanager/audits
-mosip.kernel.masterdata.audit-url=https://qa.mosip.io/v1/auditmanager/audits
+mosip.kernel.audit.manager.api=http://kernel-auditmanager-service/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=http://kernel-auditmanager-service/v1/auditmanager/audits
