--- a/deployment/sandbox-v2/group_vars/console.yml
+++ b/deployment/sandbox-v2/group_vars/console.yml
@@ -16,3 +16,6 @@ regproc_repo_tag: master
 
 ida_repo_location: '{{lookup("env",  "HOME")}}/id-authentication'
 ida_repo_tag: master
+
+pms_repo_location: '{{lookup("env",  "HOME")}}/partner-management-services'
+pms_repo_tag: master
