--- a/deployment/sandbox-v2/roles/postgres-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/defaults/main.yml
@@ -2,6 +2,7 @@ pg_common_sql_path: '{{commons_repo_location}}/db_scripts'
 pg_prereg_sql_path: '{{prereg_repo_location}}/db_scripts'
 pg_regproc_sql_path: '{{regproc_repo_location}}/db_scripts'
 pg_ida_sql_path: '{{ida_repo_location}}/db_scripts'
+pg_pms_sql_path: '{{pms_repo_location}}/db_scripts'
 pg_databases:
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_kernel'}
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_master'}
@@ -12,3 +13,4 @@ pg_databases:
     - {sql: '{{pg_prereg_sql_path}}', db_name: 'mosip_prereg'}
     - {sql: '{{pg_regproc_sql_path}}', db_name: 'mosip_regprc'}
     - {sql: '{{pg_ida_sql_path}}', db_name: 'mosip_ida'}
+    - {sql: '{{pg_pms_sql_path}}', db_name: 'mosip_pmp'}
