--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,8 +1,8 @@
 # Master playbook
 #
 
-- {import_playbook: playbooks/cluster.yml, vars: {cluster: mzcluster, master: mzmaster, workers: mzworkers}}
-- {import_playbook: playbooks/cluster.yml, vars: {cluster: dmzcluster, master: dmzmaster, workers: dmzworkers}}
+#- {import_playbook: playbooks/cluster.yml, vars: {cluster: mzcluster, master: mzmaster, workers: mzworkers}}
+#- {import_playbook: playbooks/cluster.yml, vars: {cluster: dmzcluster, master: dmzmaster, workers: dmzworkers}}
 - import_playbook: playbooks/console.yml  # Basic setup on console machine
 - import_playbook: playbooks/nginx.yml # Setting nginx in advance so that Keycloak etc. can be tested 
 - import_playbook: playbooks/env.yml # MOSIP DB, Keycloak, hdfs etc.
@@ -12,3 +12,5 @@
 - import_playbook: playbooks/regproc.yml
 - import_playbook: playbooks/ida.yml
 - import_playbook: playbooks/idrepo.yml
+- import_playbook: playbooks/admin.yml
+- import_playbook: playbooks/pms.yml
