--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -6,14 +6,16 @@
 sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com 
 sandbox_public_url: 'https://{{sandbox_domain_name}}'
 
+ssl:
+  email: info@mosip.io
+  base_dir: '/etc/letsencrypt' # Default we don't change this but use this path in Nginx
+  certificate: '/etc/letsencrypt/live/{{sandbox_domain_name}}/fullchain.pem'
+  certificate_key: '/etc/letsencrypt/live/{{sandbox_domain_name}}/privkey.pem'
+
 install_root: /home/mosipuser/mosip-infra/deployment/sandbox-v2
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 
-ansible_python_interpreter: /usr/bin/python2  # Python3 will be best to use with CentOS 8
-
 artifactory_uri: 'http://13.71.87.138:8040'
-
-info_email_address: info@mosip.io  # Used in generating letsencrypt certificates
 
 docker_wait_time: 600   # Wait for docker to pull and deploy
 
