[MOSIP-1805] Resident services added to site.yml.

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -14,3 +14,4 @@
 - import_playbook: playbooks/idrepo.yml
 - import_playbook: playbooks/admin.yml
 - import_playbook: playbooks/pms.yml
+- import_playbook: playbooks/resident.yml
