[MOSIP-438] Captcha added

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
@@ -308,7 +308,8 @@ mosip.pre-registration.transliteration.transliterate.id=mosip.pre-registration.t
 
 #--------UI params---------
 # List of keys which UI will consume
-ui.config.params=preregistration.availability.sync,preregistration.availability.noOfDays,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable
+ui.config.params=preregistration.availability.sync,preregistration.availability.noOfDays,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.id.validation.identity.email,mosip.id.validation.identity.postalCode,mosip.id.validation.identity.phone,mosip.id.validation.identity.dateOfBirth,mosip.id.validation.identity.referenceIdentityNumber,mosip.default.dob.month,mosip.default.dob.day,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.auto.logout,preregistration.timespan.cancel,preregistration.timespan.rebook,preregistration.booking.offset,mosip.right_to_left_orientation,mosip.left_to_right_orientation,mosip.id.validation.identity.age,mosip.id.validation.identity.fullName.[*].value,mosip.id.validation.identity.addressLine1.[*].value,preregistration.documentupload.allowed.file.type,preregistration.documentupload.allowed.file.nameLength,preregistration.documentupload.allowed.file.size,mosip.preregistration.auto.logout.idle,mosip.preregistration.auto.logout.timeout,mosip.preregistration.auto.logout.ping,mosip.country.code,mosip.notificationtype,mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable,google.recaptcha.site.key
+
 # This config is used for loading recommended centers based on the value of the config. The value depicts the location hierarchy code of the hierarchy based on which the recommended centers is loaded
 preregistration.recommended.centers.locCode=5
 
@@ -354,3 +355,11 @@ mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demogr
 mosip.pre-registration.notification.id.send=mosip.pre-registration.notification.notify
 mosip.pre-registration.qrcode.id.generate=mosip.pre-registration.qrcode.generate
 mosip.preregistration.document.id.upload=mosip.pre-registration.document.upload
+
+
+#-------------------captcha---------------
+google.recaptcha.site.key=6LcYufkUAAAAAGLHAJOeS2fuH2edB_yOjmsLVUg-
+google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
+google.recaptcha.secret.key=6LcYufkUAAAAAG6jC1ZodRTp9aieVBj6XKy-n0LA
+mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.validate
+
