--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -35,10 +35,10 @@ mosip.kernel.sms.unicode=1
 # -- Email notification -------
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
-mosip.kernel.notification.email.from=mosiptestuser@gmail.com
-spring.mail.host=smtp.sendgrid.net
-spring.mail.username=apikey
-spring.mail.password={{ smptp_password }}
+mosip.kernel.notification.email.from={{ site.smtp.email_from }}
+spring.mail.host={{ site.smtp.host }}
+spring.mail.username={{ site.smtp.username }}
+spring.mail.password={{ site.smtp.password }}
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
