--- a/deployment/sandbox-v2/roles/config-repo/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-repo/tasks/main.yml
@@ -10,7 +10,16 @@
      src: '../files/properties/'  
      dest: '{{config_repo_node_path}}' 
      force: no
-    
+
+#TODO: Repetition here.  Improve the code.
+- import_tasks: templates.yml  # Deployment specific properites are overwritten here
+  vars:
+    prop_file: pre-registration-qa.properties
+
+- import_tasks: templates.yml  # Deployment specific properites are overwritten here
+  vars:
+    prop_file: kernel-qa.properties
+
 - name: Install git 
   yum:
     name: git
