--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -75,3 +75,11 @@ keycloak:
   user: admin
   password: admin
   url: '{{mzingress.base_url}}/keycloak'
+
+softhsm:
+  ida_auth:
+    label: ida-auth  
+    conf_path: '{{install_root}}/roles/softhsm/files/softhsm2.conf'
+    tokens_path: '{{install_root}}/roles/softhsm/files/tokens/' 
+    node: mzworker0
+    local_folder: /mnt/mosip_data/softhsm/ida_auth 
