--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.pvc.name }} 
 spec:
-  storageClassName: {{ .Values.localStorage.name }}
+  storageClassName: {{ .Values.sc.name }}
   accessModes:
     - ReadWriteOnce
   resources:
